--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,8 @@ jobs:
 
     - name: Build
       run: go build .
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: educabiz-scraper
+        path: educabiz-scraper
