--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         go-version: '1.24'
 
     - name: Build
-      run: go build .
+      run: make macos
 
     - uses: actions/upload-artifact@v4
       with:
