--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,12 @@ on:
 
 jobs:
 
-  build-mac:
-    runs-on: macos-15
+  build:
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      matrix:
+        os: [ubuntu, macos, windows]
+        arch: [amd64, arm64]
     steps:
     - uses: actions/checkout@v4
 
@@ -28,12 +32,14 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.24'
+        go-version: "1.24"
 
     - name: Build
-      run: make macos
+      run: go build -trimpath . -o educabiz-scraper-${{ matrix.os }}-${GOARCH}
+      env:
+        GOARCH: ${{ matrix.arch }}
 
     - uses: actions/upload-artifact@v4
       with:
-        name: educabiz-scraper
-        path: educabiz-scraper
+        name: educabiz-scraper-${{ matrix.os }}-${{ matrix.arch }}
+        path: educabiz-scraper-${{ matrix.os }}-${{ matrix.arch }}
