--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         go-version: "1.24"
 
     - name: Build
-      run: go build -trimpath . -o educabiz-scraper-${{ matrix.os }}-${GOARCH}
+      run: go build -trimpath -o educabiz-scraper-${{ matrix.os }}-${GOARCH}
       env:
         GOARCH: ${{ matrix.arch }}
 
