--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         go-version: "1.24"
 
     - name: Build
-      run: go build -trimpath -o educabiz-scraper-${{ matrix.os }}-${GOARCH}
+      run: go build -trimpath -o educabiz-scraper-${{ matrix.os }}-${{ matrix.arch }}
       env:
         GOARCH: ${{ matrix.arch }}
 
