--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
 
   build:
     runs-on: ${{ matrix.os }}-latest
+    continue-on-error: true
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
