--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
     strategy:
       matrix:
         os: [linux, windows]
+      max-parallel: 1
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
