--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,14 +36,10 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: educabiz-scraper-${{ matrix.os }}-${{ matrix.arch }}
-        path: educabiz-scraper-${{ matrix.os }}
+        name: educabiz-scraper-${{ runner.os }}-${{ runner.arch }}
+        path: educabiz-scraper-${{ runner.os }}
 
   build-ubuntu-windows:
-    strategy:
-      matrix:
-        os: [linux, windows]
-      max-parallel: 1
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
@@ -66,10 +62,18 @@ jobs:
     - name: Install dependencies
       run: sudo apt-get install -q -y libgl1-mesa-dev xorg-dev libxkbcommon-dev gcc-mingw-w64
 
-    - name: Build
-      run: make ${{ matrix.os }}
+    - name: Build linux
+      run: make linux
 
     - uses: actions/upload-artifact@v4
       with:
-        name: educabiz-scraper-${{ matrix.os }}-${{ runner.arch }}
-        path: educabiz-scraper-${{ matrix.os }}
+        name: educabiz-scraper-linux-${{ runner.arch }}
+        path: educabiz-scraper-linux
+
+    - name: Build windows
+      run: make windows
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: educabiz-scraper-windows-${{ runner.arch }}
+        path: educabiz-scraper-windows.exe
